--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "tsc ./server.ts && node server.js"
+    "server": "tsc ./server.ts && node server.js",
+    "_server": "ts-node ./server.ts"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "morgan": "~1.9.1",
     "random-seed": "0.3.0",
     "socket.io": "4.4.1",
+    "ts-node": "^10.7.0",
     "uuid": "8.3.2"
   }
 }
