--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,12 @@
 {
+  "extends": "ts-node/node16/tsconfig.json",
+  "ts-node": {
+    "transpileOnly": true,
+    "files": true,
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  },
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": false,
@@ -8,10 +16,17 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "lib": [
+      "ES6",
+      "es2021"
+    ],
     "paths": {
       "*": [
         "node_modules/*"
       ]
-    }
-  }
+    },
+  },
+  "include": [
+    "./GameModules/Space/processor/systemCreator.worker.ts"
+  ]
 }
